<resources>
    <string name="app_name">Inno Car</string>
    <string name="action_discovery">검색</string>
    <string name="action_edit">수정</string>
    <string name="action_log_report">로그리포트</string>
    <string name="btn_ok">확인</string>
    <string name="btn_perdict">상세보기</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_yes">예</string>
    <string name="btn_no">아니오</string>
    <string name="btn_start">시작하기</string>
    <string name="btn_previous">이전</string>
    <string name="btn_next">다음</string>
    <string name="btn_google_auth">Google 계정으로 인증</string>
    <string name="btn_facebook_auth">Facebook 계정으로 인증</string>
    <string name="btn_connect">연결</string>
    <string name="btn_later">나중에</string>
    <string name="btn_done">완료</string>
    <string name="btn_register_vehicle">차량등록</string>
    <string name="btn_seutp_obd">진단장치(OBD) 설정</string>
    <string name="btn_save">저장</string>
    <string name="btn_register">등록</string>
    <string name="btn_exit">종료</string>
    <string name="btn_ers_call">전화</string>
    <string name="btn_ers_sms">문자메시지</string>
    <string name="btn_start_service">서비스를 시작합니다</string>
    <string name="dialog_title_network_error">네트웍 오류</string>
    <string name="dialog_message_network_error">서버에 연결할 수 없습니다\n\n다시 시도하시겠습니까?</string>
    <string name="dialog_title_server_error">서버 오류</string>
    <string name="dialog_message_server_error">서버에서 오류가 발생 했습니다\n\n다시 시도하시겠습니까?</string>
    <string name="dialog_message_cannot_sign_in">서버에 로그인 할 수 없습니다\n\n다시 시도 하시겠습니까?</string>
    <string name="dialog_message_cannot_sign_in_google">구글 인증에 실패하였습니다\n\n다시 시도 하시겠습니까?</string>
    <string name="dialog_message_cannot_sign_in_facebook">페이스북 인증에 실패하였습니다\n\n다시 시도 하시겠습니까?</string>
    <string name="dialog_message_turning_bluetooth_on">블루투스를 켜고 있습니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_connecting_obd_device">진단장치를 연결하는 중입니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_cannot_connect_obd_device">진단장치를 연결할 수 없습니다.\n\n먼저 시동을 걸고 연결하세요.\n\n다시 시도하시겠습니까?</string>
    <string name="dialog_message_not_supported_obd_protocol">지원하지않는 프로토콜입니다</string>
    <string name="dialog_message_insufficient_pid">먼저 시동을 걸고 연결하세요.\n\n계속 문제가 발생하면 관리자에게 문의하세요.
  </string>
    <string name="dialog_title_edit_vehicle">차량수정</string>
    <string name="dialog_message_edit_vehicle">등록된 차량의 정보를 수정하실 경우 기존 정보는 삭제됩니다\n\n수정 하시겠습니까?</string>
    <string name="dialog_title_input_odometer">차량번호 및 총주행거리(ODO)</string>
    <string name="dialog_message_input_plate_no">차량번호를 입력해 주세요</string>
    <string name="dialog_message_input_odometer">총주행거리(ODO)를 입력해 주세요</string>
    <string name="dialog_message_loading_account">서버로 부터 등록된 회원정보를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026
  </string>
    <string name="dialog_message_loading_vehicle">서버로 부터 등록된 차량정보를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026
  </string>
    <string name="dialog_message_loading_vehicle_maker">서버로 부터 제조사 리스트를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026
  </string>
    <string name="dialog_message_loading_vehicle_model">서버로 부터 모델 리스트를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026
  </string>
    <string name="dialog_message_loading_vehicle_fuel">서버로 부터 유종 리스트를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026
  </string>
    <string name="dialog_message_loading_vehicle_displacement">서버로 부터 배기량 리스트를 읽고 있습니다\n\n잠시만 기다려
    주세요\u2026
  </string>
    <string name="dialog_message_loading_region">서버로 부터 지역 리스트를 읽고 있습니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_connect_obd_device">%s 장치를 연결하시겠습니까?</string>
    <string name="dialog_title_discoverying_obd_device">진단장치(OBD) 검색</string>
    <string name="dialog_message_discovering_obd_device">진단장치를 검색 중입니다</string>
    <string name="dialog_message_discovering_obd_device_desc">검색되는 장치 이름에 \'OBD\'가 포함된 장치를 선택하세요
  </string>
    <string name="dialog_message_signing_up">회원을 등록 중입니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_updating_account">회원정보를 저장 중입니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_registering_vehicle">차량을 등록 중입니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_updating_vehicle">차량정보를 저장 중입니다\n\n잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_updating_odometer">총주행거리(ODO)를 업데이트 중입니다\u2026</string>
    <string name="dialog_message_wait_for">잠시만 기다려 주세요\u2026</string>
    <string name="dialog_message_loading_for">로딩 중입니다\u2026</string>
    <string name="dialog_title_setup_finished">환경설정 완료</string>
    <string name="dialog_message_setup_finished">환경설정이 완료되었습니다\n\n수고하셨습니다!</string>
    <string name="dialog_title_need_register_vehicle">차량등록 안내</string>
    <string name="dialog_message_need_register_vehicle">등록된 차량이 없습니다\n\n지금 등록하시겠습니까?</string>
    <string name="dialog_title_need_register_obd">진단장치(OBD) 안내</string>
    <string name="dialog_message_need_register_obd">진단장치(OBD)가 설정되지 않았습니다\n\n지금 설정하시겠습니까?</string>
    <string name="dialog_title_vehicle_setup">차량설정</string>
    <string name="dialog_message_vehicle_setup_successfully">차량 설정이 완료되었습니다</string>
    <string name="dialog_title_driving_exit">주행종료</string>
    <string name="dialog_message_driving_exit">%d초 후에 앱을 종료합니다</string>
    <string name="dialog_title_driving_off">주행종료</string>
    <string name="dialog_message_driving_off">시동이 꺼졌습니다\n\n%d초 후에 종료합니다</string>
    <string name="dialog_title_ers">긴급 호출</string>
    <string name="dialog_mesage_ers">%d초 후 자동으로 닫힙니다</string>
    <string name="dialog_title_auto_connect">차량 스캔</string>
    <string name="dialog_message_auto_connect_diagnostics">차량을 진단하고 있습니다\u2026</string>
    <string name="dialog_message_auto_connect_mil_off">차량에 이상이 없습니다</string>
    <string name="dialog_message_auto_connect_mil_on">차량에 이상을 발견했습니다</string>
    <string name="dialog_title_notice_mil">이상 알림</string>
    <string name="dialog_message_notice_mil_message">상세진단을 통해 이상부위를 확인하세요</string>
    <string name="dialog_title_consumables_guide">소모품 관리 안내</string>
    <string name="dialog_consumables_guide_title_1">1. 점검, 정비의 중요성</string>
    <string name="dialog_consumables_guide_content_1">안전하고 쾌적한 운행을 위해서는 일상점검, 정기점검이 중요하며, 차량을 최적의 상태로
    유지하기 위한 소모품 관리도 필수입니다
  </string>
    <string name="dialog_consumables_guide_title_2">2.스마트한 소모품 관리</string>
    <string name="dialog_consumables_guide_content_2">주행거리와 경과시간을 기준으로 하는 통상적인 방법에 차량정보, 운전스타일 분석이 더해진
    스마트한 소모품 관리 기능을 제공합니다
  </string>
    <string name="dialog_consumables_guide_warning">* 차량 제조사에서 제공하는 취급설명서에 표기된 규정과 규격에 맞는부품 사용을
    권장합니다
  </string>
    <string name="dialog_dont_show_again">다시 보지 않기</string>
    <string name="dialog_title_consumables">점검 교체 주기 설정</string>
    <string name="dialog_message_input_distance">최종 교체 거리(ODO)를 입력하세요</string>
    <string name="dialog_message_input_months">최종 교체 시기</string>
    <string name="dialog_consumables_now">[지금 점검 교체]</string>
    <string name="dialog_consumables_recent">[한달 내에 점검 교체 함]</string>
    <string name="dialog_consumables_last">최종 교체 거리</string>
    <string name="dialog_consumables_message_last">[이전 점검/교체가 없을시 0 입력]</string>
    <string name="dialog_consumalbes_unit">km</string>
    <string name="dialog_consumables_before_month">개월 전</string>
    <string name="dialog_consumables_message_disabled">\u0020관리를 종료하시겠습니까?</string>
    <string name="dialog_consumables_message_start">\u0020관리를 시작합니다</string>
    <string name="dialog_consumables_message_termination">\u0020관리를 종료합니다</string>
    <string name="dialog_consumables_message_now">(을)를 지금 점검 및 교체 하셨습니까?</string>
    <string name="dialog_consumables_message_recent">(을)를 최근 점검 및 교체 하셨습니까?</string>
    <string name="dialog_consumbales_message_updating">업데이트 중입니다\u2026</string>
    <string name="dialog_title_vehicle_diary_guide">차계부 안내</string>
    <string name="dialog_vehicle_diary_guide_title_1">1. 이노카 차계부</string>
    <string name="dialog_vehicle_diary_guide_content_1">이노카 차계부는 카드결제 SMS를 통해 주유내역과 정비기록 등을 손쉽게 입력하여
    유지비 및 차량관리를 편리하게 해주는 기능입니다
  </string>
    <string name="dialog_group_error">등록된 그룹코드가 아닙니다.\n회원 가입은 innocar@kt.com 으로 문의 주시면 감사하겠습니다.</string>
    <string name="dialog_vehicle_diary_guide_title_2">1. 자동 입력</string>
    <string name="dialog_vehicle_diary_guide_content_2_1">주유 관련 카드결제 SMS를 수신할 경우 지출 내역을 자동으로 기록합니다
  </string>
    <string name="dialog_vehicle_diary_guide_content_2_2">정비 관련 카드결제 SMS를 수신할 경우 지출 내역을 자동으로 기록합니다
  </string>
    <string name="dialog_vehicle_diary_guide_content_2_3">단, 사용처가 주요 브랜드 정비소(스피드메이트, 오토큐 등)가 아닌경우 기록이
    누락될 수 있습니다
  </string>
    <string name="dialog_vehicle_diary_guide_title_3">2. 직접 입력</string>
    <string name="dialog_vehicle_diary_guide_content_3">카드결제 SMS를 수신하지 않는 경우 내역을 직접 입력할 수 있습니다
  </string>
    <string name="dialog_vehicle_diary_guide_warning">* 자동 기록 또는 수동 입력 시 오기가 발생했을 경우 직접 수정할 수 있습니다
  </string>
    <string name="dialog_bluetooth_not_response">블루투스가 응답하지 않습니다</string>
    <string name="dialog_reset_bluetooth">블루투스를 리셋하시겠습니까?\n다른 블루투스 장치의 연결이 끊어집니다.\n\n%1$d초 후에 자동으로
    리셋됩니다.
  </string>
    <string name="dialog_title_obd_malfunction">OBD 장치가 응답하지 않습니다</string>
    <string name="dialog_message_obd_malfunction">OBD 장치를 제거 한 후에 다시 설치해 주세요.\n\n이용에 불편을 드려 죄송합니다.
  </string>
    <string name="intro_company">© kt corp</string>
    <string name="intro_service_description">\'이노카\' 앱 은 범용 진단장치(OBD)와 스마트폰을 활용하여 차량편의 서비스를 제공합니다\n운전
    후 다양한 통계정보를 확인할 수 있습니다
  </string>
    <string name="intro_fee_warning">3G/4G망으로 이용 시 요금제에 따라 데이터 통화료가 발생할 수 있습니다</string>
    <string name="disclaimer_agree">개인정보 취급방침 동의(필수)</string>
    <string name="individual_info_agree">개인정보 수집 및 이용 동의(필수)</string>
    <string name="location_based_service_agree">위치기반서비스 이용약관 동의(필수)</string>
    <string name="sign_in_google_play_services_error">Google Play 서비스를 사용할 수 없습니다</string>
    <string name="sign_in_process_sign_in">로그인 중입니다\u2026</string>
    <string name="sign_in_process_auth">회원 인증 중입니다\u2026</string>
    <string name="sign_out_process_sign_out">로그아웃 중입니다\u2026</string>
    <string name="sign_up_nick_name">닉네임</string>
    <string name="sign_up_nick_name_desc">내 프로필 이름입니다</string>
    <string name="sign_up_birthday">출생년도</string>
    <string name="sign_up_birthday_desc_old">본인 연령대 통계정보를 제공합니다</string>
    <string name="sign_up_region">지역</string>
    <string name="sign_up_region_desc_old">소속된 지역별 통계정보를 제공합니다</string>
    <string name="sign_up_sex">성별</string>
    <string name="sign_up_sex_desc_old">성별 통계정보를 제공합니다</string>
    <string name="sign_up_ho_no">전화번호</string>
    <string name="sign_up_ho_no_desc">비상상황 발생시 수신받을 연락처입니다</string>
    <string name="sign_up_email">정보 수신 메일</string>
    <string name="sign_up_email_desc_old">본 메일을 통해 다양한 통계정보를 정기적으로 제공합니다</string>
    <string name="sign_up_please_input">입력해 주세요</string>
    <string name="sign_up_please_select">선택해 주세요</string>
    <string name="sign_up_male">남성</string>
    <string name="sign_up_female">여성</string>
    <string name="sign_up_cannot_connect_server">서버와 안정적으로 연결할 수 없습니다</string>
    <string name="sign_up_process_auth">인증 중입니다\u2026</string>
    <string name="sign_up_account_info">회원정보</string>
    <string name="sign_up_input_nick_name">닉네임을 입력해 주세요</string>
    <string name="general_setting_ers">긴급 호출</string>
    <string name="general_setting_ers_summary">연락처를 설정해 주세요</string>
    <string name="general_setting_overspeed_alarm_enabled">경고 알림음</string>
    <string name="general_setting_location_enabled">운행경로 제공</string>
    <string name="overspeed_alarm_enabled">사용</string>
    <string name="overspeed_alarm_disabled">사용안함</string>
    <string name="location_enabled">지도상에 경로 및 중요 이벤트를 표시합니다</string>
    <string name="location_disabled">지도에 경로 및 중요 이벤트를 표시하지 않습니다</string>
    <string name="floatting_enabled">홈 화면에서 플로팅 버튼을 표시합니다</string>
    <string name="floatting_disabled">홈 화면에서 플로팅 버튼을 표시하지 않습니다</string>
    <string name="general_setting_floatting_enabled">플로팅 버튼 표시</string>
    <string name="general_setting_mileage">차량번호 및 총 주행거리</string>
    <string name="general_setting_mileage_summary">차량번호 및 현재 총 주행거리를 수정할 수 있습니다</string>
</resources>